--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "magink",
   "version": "0.1.0",
+  "homepage": "https://swanky-dapps.github.io/magink-dapp",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -8,6 +9,7 @@
     "bn.js": "^5.2.1",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
@@ -28,7 +30,9 @@
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
